@@ -10,7 +10,7 @@ a {
 }
 
 a:Visited {
-    color: blue;
+
 }
 
 a:hover {
